<resources>
    <string name="app_name">TitoAprendeALeer</string>
    <string name="letra_o">letra_o</string>
    <string name="letra_p">letra_p</string>
    <string name="letra_q">letra_q</string>
    <string name="letra_r">letra_r</string>
    <string name="letra_s">letra_s</string>
    <string name="letra_t">letra_t</string>
    <string name="letra_u">letra_u</string>
    <string name="letra_v">letra_v</string>
    <string name="letra_w">letra_w</string>
    <string name="letra_x">letra_x</string>
    <string name="letra_y">letra_y</string>
    <string name="letra_z">letra_z</string>
    <string name="letra_a">letra_a</string>
    <string name="letra_b">letra_b</string>
    <string name="letra_c">letra_c</string>
    <string name="letra_d">letra_d</string>
    <string name="letra_e">letra_e</string>
    <string name="letra_f">letra_f</string>
    <string name="letra_g">letra_g</string>
    <string name="letra_h">letra_h</string>
    <string name="letra_i">letra_i</string>
    <string name="letra_j">letra_j</string>
    <string name="letra_k">letra_k</string>
    <string name="letra_l">letra_l</string>
    <string name="letra_m">letra_m</string>
    <string name="letra_n">letra_n</string>
    <string name="letra_ene">letra_ene</string>
    <string name="primer_numero">primer_numero</string>
    <string name="segundo_numero">segundo_numero</string>
    <string name="primavera">primavera</string>
    <string name="verano">verano</string>
    <string name="otonio">otonio</string>
    <string name="invierno">invierno</string>
    <string name="april">april</string>
    <string name="mayo">mayo</string>
    <string name="junio">junio</string>
    <string name="multiplicar">multiplicar</string>
    <string name="operaciones_basicas">operaciones_basicas</string>
    <string name="restar">restar</string>
    <string name="sumar">sumar</string>
</resources>
