<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AlphabetActivity"
    android:weightSum="1"
    android:background="@drawable/hd2"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">



        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_a"
            android:padding="20dp"
            android:src="@drawable/a"
            android:id="@+id/bt_button1"
            android:layout_margin="7dp"
            />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_b"
            android:padding="20dp"
            android:src="@drawable/b"
            android:id="@+id/bt_button2"
            android:layout_margin="7dp"
            />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_c"
            android:padding="20dp"
            android:src="@drawable/c"
            android:id="@+id/bt_button3"
            android:layout_margin="7dp"
            />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_d"
            android:padding="20dp"
            android:src="@drawable/d"
            android:id="@+id/bt_button4"
            android:layout_margin="7dp"
            />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_e"
            android:padding="20dp"
            android:src="@drawable/e"
            android:id="@+id/bt_button5"
            android:layout_margin="7dp"
            />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_f"
            android:padding="20dp"
            android:src="@drawable/f"
            android:id="@+id/bt_button6"
            android:layout_margin="7dp"
            />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">


        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_g"
            android:padding="20dp"
            android:src="@drawable/g"
            android:id="@+id/bt_button7"
            android:layout_margin="7dp"
            />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_h"
            android:padding="20dp"
            android:src="@drawable/h"
            android:id="@+id/bt_button8"
            android:layout_margin="7dp"
            />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_i"
            android:padding="20dp"
            android:src="@drawable/i"
            android:id="@+id/bt_button9"
            android:layout_margin="7dp"
            />


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_j"
            android:padding="20dp"
            android:src="@drawable/j"
            android:id="@+id/bt_button10"
            android:layout_margin="7dp"
            />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_k"
            android:padding="20dp"
            android:src="@drawable/k"
            android:id="@+id/bt_button11"
            android:layout_margin="7dp"
            />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_l"
            android:padding="20dp"
            android:src="@drawable/l"
            android:id="@+id/bt_button12"
            android:layout_margin="7dp"
            />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_m"
            android:padding="20dp"
            android:src="@drawable/m"
            android:id="@+id/bt_button13"
            android:layout_margin="7dp"
            />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_n"
            android:padding="20dp"
            android:src="@drawable/n"
            android:id="@+id/bt_button14"
            android:layout_margin="7dp"
            />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_ene"
            android:padding="20dp"
            android:src="@drawable/ene"
            android:id="@+id/bt_button15"
            android:layout_margin="7dp"
            />

    </LinearLayout>
    <Button
        android:text="Next"
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

</LinearLayout>