<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:weightSum="1"
    android:background="@drawable/hd2"
    >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="1">

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_o"
            android:padding="20dp"
            android:src="@drawable/o"
            android:id="@+id/bt_button16"
            android:layout_margin="10dp"
            />


        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_p"
            android:padding="20dp"
            android:src="@drawable/p"
            android:id="@+id/bt_button17"
            android:layout_margin="10dp"
            />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_q"
            android:padding="20dp"
            android:src="@drawable/q"
            android:id="@+id/bt_button18"
            android:layout_margin="10dp"
            />

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_r"
            android:padding="20dp"
            android:src="@drawable/r"
            android:id="@+id/bt_button19"
            android:layout_margin="10dp"
            />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_s"
            android:padding="20dp"
            android:src="@drawable/s"
            android:id="@+id/bt_button20"
            android:layout_margin="10dp"
            />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_t"
            android:padding="20dp"
            android:src="@drawable/t"
            android:id="@+id/bt_button21"
            android:layout_margin="10dp"
            />

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_u"
            android:padding="20dp"
            android:src="@drawable/u"
            android:id="@+id/bt_button22"
            android:layout_margin="10dp"
            />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_v"
            android:padding="20dp"
            android:src="@drawable/v"
            android:id="@+id/bt_button23"
            android:layout_margin="10dp"
            />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_w"
            android:padding="20dp"
            android:src="@drawable/w"
            android:id="@+id/bt_button24"
            android:layout_margin="10dp"
            />

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_x"
            android:padding="20dp"
            android:src="@drawable/x"
            android:id="@+id/bt_button25"
            android:layout_margin="10dp"

            />


        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_y"
            android:padding="20dp"
            android:src="@drawable/y"
            android:id="@+id/bt_button26"
            android:layout_margin="10dp"
            />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/letra_z"
            android:padding="20dp"
            android:src="@drawable/z"
            android:id="@+id/bt_button27"
            android:layout_margin="10dp"/>
    </LinearLayout>

</LinearLayout>
