<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hd2"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context=".EstationAnio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.26">


        <ImageButton
            android:id="@+id/bt_button1"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_margin="7dp"
            android:padding="100dp"
            android:src="@drawable/primavera"
            android:text="@string/primavera" />

        <ImageButton
            android:id="@+id/bt_button2"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_margin="7dp"
            android:padding="100dp"
            android:src="@drawable/verano"
            android:text="@string/verano" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.23">

        <ImageButton
            android:id="@+id/bt_button3"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_margin="7dp"
            android:padding="100dp"
            android:src="@drawable/otonio"
            android:text="@string/otonio" />

        <ImageButton
            android:id="@+id/bt_button4"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_margin="7dp"
            android:padding="100dp"
            android:src="@drawable/invierno"
            android:text="@string/invierno" />

    </LinearLayout>

</LinearLayout>